// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errorHtml > escapes the message so a malicious payload cannot break out of the card 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <style>
      body { margin: 0; padding: 24px; font: 14px/1.6 ui-sans-serif, system-ui, sans-serif; background: #0f172a; color: #e2e8f0; }
      .card { max-width: 720px; margin: 0 auto; padding: 20px 22px; border-radius: 16px; border: 1px solid #334155; background: #111827; }
      h1 { margin-top: 0; font-size: 1rem; }
      code { color: #fda4af; }
    </style>
  </head>
  <body>
    <div class="card">
      <h1>Ox Content Preview</h1>
      <p>&lt;script&gt;alert(1)&lt;/script&gt;</p>
      <p>Make sure <code>ox-content-lsp</code> is available or set <code>oxContent.server.path</code>.</p>
    </div>
  </body>
</html>"
`;

exports[`errorHtml > produces a complete HTML document 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <style>
      body { margin: 0; padding: 24px; font: 14px/1.6 ui-sans-serif, system-ui, sans-serif; background: #0f172a; color: #e2e8f0; }
      .card { max-width: 720px; margin: 0 auto; padding: 20px 22px; border-radius: 16px; border: 1px solid #334155; background: #111827; }
      h1 { margin-top: 0; font-size: 1rem; }
      code { color: #fda4af; }
    </style>
  </head>
  <body>
    <div class="card">
      <h1>Ox Content Preview</h1>
      <p>boom</p>
      <p>Make sure <code>ox-content-lsp</code> is available or set <code>oxContent.server.path</code>.</p>
    </div>
  </body>
</html>"
`;

exports[`errorHtml > surfaces the recovery hint pointing at oxContent.server.path 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <style>
      body { margin: 0; padding: 24px; font: 14px/1.6 ui-sans-serif, system-ui, sans-serif; background: #0f172a; color: #e2e8f0; }
      .card { max-width: 720px; margin: 0 auto; padding: 20px 22px; border-radius: 16px; border: 1px solid #334155; background: #111827; }
      h1 { margin-top: 0; font-size: 1rem; }
      code { color: #fda4af; }
    </style>
  </head>
  <body>
    <div class="card">
      <h1>Ox Content Preview</h1>
      <p>failed</p>
      <p>Make sure <code>ox-content-lsp</code> is available or set <code>oxContent.server.path</code>.</p>
    </div>
  </body>
</html>"
`;
